tests/sources/invalid/classes/type_member_access_errors.fire
// Malformed type-level and instance member accesses.
class Foo {
    int32 v;

    Foo() {
        this.v = 1;
    }

    static int32 bar() {
        return 7;
    }
}

// Missing method name after type '.'
int32 a = Foo.;  //~ ERROR FS-PARSE-0010 @15
//~^ ERROR FS-PARSE-0010 @15

// Missing '(' after type method name
int32 b = Foo.bar;  //~ ERROR FS-PARSE-0010 @18
//~^ ERROR FS-PARSE-0010 @18

// Missing identifier after instance '.'
Foo f = Foo();  //~ ERROR FS-SEM-0010 @9
int32 c = f.;  //~ ERROR FS-PARSE-0010 @13
//~^ ERROR FS-SEM-0002 @7
